update main text

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 
-name:         개인 기록용 Blog
+name:         Yeeun's Devlog
 tagline:      A responsive theme for your project on GitHub Pages
 url: "https://ybebee9.github.io" # the base hostname & protocol for your site
 baseurl: "" 
